# Artichoke-CoreXY

./: CMakeLists.txt  README.md  source.c  source.h
src/: artichoke.c  artichoke.h  constants.h  corexy.c  corexy.h  delay.c  delay.h  handlers.c  handlers.h  motors.c  motors.h  paint.c  paint.h  source.c  source.h  stepper.c  stepper.h  vector.c  vector.h
